--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.create-todo-wrapper{
+  border:1px solid rgba(114, 114, 114, 0.5);;
+  border-radius: 10px;
+}
+.todo-wrapper{
+  position: relative;
+  width: 20rem;
+  border:1px solid #0069d9;
+  border-radius: 10px;
+}
+.number-wrapper{
+  position: absolute;
+  top: -1px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 5.5rem;
+  height: 2.5rem;
+  background-color: #0069d9;
+  color:white;
+  border:1px solid#0069d9;
+  border-radius: 0% 0% 50% 50%;
+}
+.remove{
+  font-size: 0.75em;
+  text-decoration: underline;
+  color:rgb(114, 114, 114);
+  cursor: pointer;
+}
