--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* spinner */
+/* .spinner-border{
+  width: 5rem;
+height: 5rem;
+font-size: 3rem;
+text-align: center;
+
+} */
 
 .create-todo-wrapper{
   border:1px solid rgba(114, 114, 114, 0.5);;
