--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,11 @@ text-align: center;
   border:1px solid #0069d9;
   border-radius: 10px;
 }
+.filter-todo-wrapper{
+  max-width: 20rem;
+  border:1px solid rgba(114, 114, 114, 0.5);;
+  border-radius: 10px;
+}
 .number-wrapper{
   position: absolute;
   top: -1px;
